--- a/package.json
+++ b/package.json
@@ -20,8 +20,19 @@
       "react-app/jest"
     ]
   },
-  
   "resolutions": {
     "mini-css-extract-plugin": "2.4.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
